package Exercicio_03_AmigoSecreto;

public class AmigoInexistenteException extends Exception {
    public AmigoInexistenteException(String message) {
        super(message);
    }
}
