package Exercicio_03_AmigoSecreto;

public class AmigoNaoSorteadoException extends Exception{
    public AmigoNaoSorteadoException(String message) {
        super(message);
    }
}
