package Exercicio_03_AmigoSecreto;

public class NaoPossuiAmigoParaSortearException extends Exception {
    public NaoPossuiAmigoParaSortearException(String message) {
        super(message);
    }
}
