@startuml
'https://plantuml.com/class-diagram

class Amigo{
- nome : String
- email : String
- emailAmigoSecreto : String
+ Amigo(nomeAmigo:String, emailAmigo:String)
+ getNome() : String
+ setNome(nome:String) : void
+ getEmail() : String
+ setEmail(email:String) : void
+ getEmailAmigoSecreto() : String
+ setEmailAmigoSecreto(emailAmigoSecreto:String)
}

abstract class Mensagem{
    - texto : String
    - emailRemetente : String
    - anonima : boolean
    + Mensagem(texto:String, emailRemetente:String, anonima:boolean)
    + getTexto() : String
    + setTexto(texto:String) : void
    + {abstract} getTextoCompletoAExibir() : String
    + getEmailRemetente() : String
    + setEmailRemetente(emailRemetente:String) : void
    + ehAnonima() : boolean
}

class MensagemParaAlguem{
- emailDestinataio : String
+ MensagemParaAlguem(texto:String, emailRemetente:String, emailDestinataio:String, anonima:boolean)
+ getEmailDestinatario() : String
+ setEmailDestinatario(emailDestinatario:String) : void
+ getTextoCompletoAExibir() : String
}

class MensagemParaTodos{
+ MensagemParaTodos(texto:String, emailRemetente:String, anonima:boolean)
+ getTextoCompletoAExibir() : String
}

class SistemaAmigo{
- mensagens : List<Mensagem>
- amigos : List<Amigo>
+ SistemaAmigo()
+ cadastrarAmigo(emailDaPessoa:String, emailAmigo:String) : void
+ pesquisarAmigo(String emailAmigo) : Amigo
+ enviarMensagemParaTodos(texto:String, emailRemetente:String, ehAnonima:boolean) : void
+ enviarMensagemParaTodos(texto:String, emailRemetente:String, emailDestinatario:String, ehAnonima:boolean) : void
+ pesquisarMensagensAnonimas() : List<Mensagem>
+ pesquisarTodasAsMensagens() : List<Mensagem>
+ configurarAmigoSecretoDe(emailDaPessoa:String, emailAmigoSorteado) : void
+ pesquisarAmigoSecretoDe(emailDaPessoa:String)
+ sortear() : void
}

class TestaSistemaAmigo{
+ static main(args:String[]) : void
}

class TestaSistemaAmigoGUI{
+ static main(args:String[]) : void
}

class AmigoInexistenteException <<(E, Yellow)>>
class AmigoNaoSorteadoException <<(E, Yellow)>>
class NaoPossuiAmigoParaSortearException <<(E, Yellow)>>
class AmigoJaExiste <<(E, Yellow)>>

Mensagem <|-- MensagemParaAlguem
Mensagem <|-- MensagemParaTodos
SistemaAmigo ..> AmigoInexistenteException : <<Throws>>
SistemaAmigo ..> Amigo : usa
SistemaAmigo ..> Mensagem : usa
SistemaAmigo ..> NaoPossuiAmigoParaSortearException : <<Throws>>
SistemaAmigo ..> AmigoNaoSorteadoException : <<Throws>>
SistemaAmigo ..> AmigoJaExiste : <<Throws>>
TestaSistemaAmigo ..> SistemaAmigo
TestaSistemaAmigoGUI ..> SistemaAmigo
'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection

'List <|-- AbstractList
'Collection <|-- AbstractCollection

'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList

'class ArrayList {
'Object[] elementData
'size()
'}

'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

@enduml